# rust_pjsip_client

./: .gitignore  Cargo.toml  build.rs
examples/: example1.rs  example2.rs
samples/: gettysburg.raw
src/: error.rs  lib.rs  main.rs  notify_channel.rs  pj_types.rs  pjmedia_bridge.rs  pjmedia_bridge_tmp.rs  pjmedia_port_audio_sink.rs  pjsip_types.rs  pjsua_account_config.rs  pjsua_call.rs  pjsua_conf_bridge.rs  pjsua_config.rs  pjsua_memory_pool.rs  pjsua_sink_buffer_media_port.rs  pjsua_softphone_api.rs  pjsua_types.rs  tokio_utils.rs  transport.rs  trash.rs
src/pjmedia/: mod.rs  pjmedia_api.rs  pjmedia_port_audio_sink.rs  pjmedia_port_audio_stream.rs
